# demo-sustainability

./: docker-compose-energy.yml  docker-compose.yml  prometheus.yml  pyproject.toml  the_runner.sh  tpch_streamer_async.py
flink-stream-processor/: pom.xml
flink-stream-processor/src/main/java/com/tum/energy/: App.java  FlinkStreamProcessor.java
flink-stream-processor/src/test/java/com/tum/energy/: AppTest.java
grafana/provisioning/dashboards/: energy-consumption.json
schemas/: lineitem.json
schemas/unused/: customer.json  nation.json  orders.json  part.json  partsupp.json  region.json  supplier.json
