[project]
name = "kafka-pipeline"
version = "0.1.0"
description = "Kafka pipeline experiment"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "kafka-python",
    "aiokafka",
    "aiofiles",
    "python-snappy",   # <-- add this
    "pandas",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]